--- a/templates/menu.html
+++ b/templates/menu.html
@@ -25,7 +25,7 @@
 							<li class="dropdown hidden-sm hidden-xs">
 								<a class="dropdown-toggle hidden-sm hidden-xs" href="">
 								{% if notificaciones %}
-									<span class="badge">{{notificaciones}}</span>
+									<span class="badge notificaciones">{{notificaciones}}</span>
 								{% endif %}
 								{{user.username}}
 								</a>
