--- a/grupos/templates/grupos/compartir_con_grupo.html
+++ b/grupos/templates/grupos/compartir_con_grupo.html
@@ -72,29 +72,7 @@
 	<hr class="invisible half-margins">
 	<p class ="well">
 	<i class = "fa fa-info-circle"></i>		
-		El usuario al que le prestes este libro en el futuro podrá contactarte de las siguientes maneras:
-		<br>
-		<br>
-
-		{% if user.email %}
-			Tu correo electrónico: {{user.email}}
-		{% else %}
-			No tienes un correo electrónico registrado
-		{% endif %}
-
-		<br>
-
-		{% if perfil_usuario.numero_telefono_contacto %}
-			Tu número de teléfono: {{perfil_usuario.numero_telefono_contacto}}
-		{% else %}
-			<br>No tienes un número de contacto registrado. Por favor <a href="{% url 'perfiles:editar_perfil' %}">edita tu perfil</a> y añade un número de teléfono de contacto.
-		{% endif %}
-
-		<br><br>
-		Las formas de contactarte que especifiques en tu mensaje de aceptación cuando le prestes el libro.
-		<br><br>
-
-		<i class ="fa fa-user-secret"></i> No usamos tus números de teléfono ni tu email para ningún otro fin.
+		Si eliges "compartir un nuevo libro", el libro será añadido a <a target="_blank" href="{% url 'libros:mi_biblioteca' %}">tu biblioteca</a> donde puedes gestionar los grupos con los que compartes cada libro.
 	</p>
 </div>
 
