--- a/perfiles/templates/perfiles/perfil_usuario.html
+++ b/perfiles/templates/perfiles/perfil_usuario.html
@@ -4,67 +4,138 @@
 {% block content %}
 <div class = "col-md-8">
 
-	<div class ="row">
-		<div class = "col-md-offset-1">
-		{% if libros_perfil.tiene_libros_disponibles %}
-			<hr class="half-margins" /><!-- divider 30px -->	
-			<h4> Libros disponibles </h4>
+	<hr class ="half-margins invisible">
 
-			{% for l in libros_disponibles %}
-			<div class="alert callout alert-default fade in">
-				<div class="row">
-					<div class="col-md-9 col-sm-9"><!-- left text -->
-						<h4><strong>{{l.libro.titulo}}</strong> {{l.libro.autor}}</h4>
-					</div><!-- /left text -->
-					<div class="col-md-3 col-sm-3 text-right"><!-- right btn -->
-						<a href="{% url 'libros:pedir_libro' l.id %}" rel="nofollow" target="_blank" class="btn btn-warning btn-lg">Pedir Libro</a>
-					</div><!-- /right btn -->
+	<button class = "btn btn-primary active">Muro</button>
+	<button class = "btn btn-primary" onclick="location.href='{% url 'perfiles:perfil_usuario_libros' perfil.usuario.username %}'">Libros</button>
+	<hr class = "half-margins invisible">
+
+
+	<!-- Comment form -->	
+	<form action="{% url 'comments:comentar_perfil' perfil.usuario.username %}" method="post" class="sky-form boxed form_comentario">
+		{% csrf_token %}
+		<fieldset>							
+			<section>
+				<label class="textarea">
+					<i class="icon-append fa fa-comments"></i>
+					<textarea placeholder="Escribe un comentario para {{perfil.usuario.username}}" name = "comentario" rows="3"></textarea>
+				</label>
+			</section>
+		</fieldset>			
+		<footer>
+			<button type="submit" class="button">Publicar</button>
+		</footer>
+		<br>
+	</form>	
+
+	<!-- Actividad -->
+	{% for act in actividad %}
+		{% if act.1 == "comment" %}
+			<div class="alert callout alert-default">
+				<div class="row parent_comment">
+					<a class="pull-left" href="{% url 'perfiles:perfil_usuario' act.0.perfil.usuario.username %}">
+						<img src="{{act.0.perfil.imagen_perfil}}" class="img-responsive circular">
+					</a>
+				
+					&nbsp {{act.0.texto}}
+
+					<a data-id="{{ act.0.id }}" data-url-ajax="{% url 'comments:respuestas_comment_perfil_ajax' %}" data-clicked="0"
+					class="show_respuestas_comment cerrado pull-right" href="">
+						<i class = "fa fa-comment"></i>
+						{{act.0.num_respuestas|default:""}}							
+					</a>
+					<div class = "hidden comments">
+						<br>
+						<div class = "col-md-offset-1 div_respuestas">
+							<div class = "respuestas_comment">
+							</div>
+							{% if user.is_authenticated %}
+							<!-- Comment form -->	
+							<form action="" method="post" class="sky-form">
+								{% csrf_token %}
+								<fieldset>
+									<section>
+										<label class="textarea">
+											<i class="icon-append fa fa-comment fa-flip-horizontal"></i>
+											<textarea class="texto_respuesta" placeholder="Escribe una respuesta para {{act.0.perfil.usuario.username}}" 
+											name = "comentario" rows="2"></textarea>
+										</label>
+									</section>
+									<button data-id="{{act.0.id}}" data-url="{% url 'comments:responder_comment_perfil_ajax' %}" type="submit" class="button enviar_respuesta">
+									Responder</button>
+								</fieldset>			
+							</form>
+							{% endif %}
+						</div>
+					</div>
 				</div>
 			</div>
-			{% endfor %}
 		{% else %}
-			<hr class="invisible"/><!-- divider 30px -->		
-			<h4> No tiene libros disponibles por ahora.</h4>
-		{% endif %}
-		</div>
-	</div>
-	
-	<div class ="row">
-		<div class = "col-md-offset-1">
-		{% if libros_perfil.tiene_libros_prestados %}
-			<hr class="half-margins" /><!-- divider 30px -->	
-			<h4>Tiene libros prestados: </h4>
-			
-			{% for l in libros_prestados %}
-			<div class="alert callout alert-default fade in">
+			<!-- es un objeto Notificacion -->
+			<div class="alert callout alert-default">
 				<div class="row">
-					<div class="col-md-9 col-sm-9"><!-- left text -->
-						<h4><strong>{{l.libro.titulo}}</strong> {{l.libro.autor}}</h4>
-						<p>Libro de <a href="{% url 'perfiles:perfil_usuario' l.perfil_dueno.usuario.username %}">{{l.perfil_dueno.usuario.username}}</a>
-						{% if l.fecha_max_devolucion %}, prestado hasta: {{l.fecha_max_devolucion|date}} {% endif %}</p>
-					</div><!-- /left text -->
+					<a data-id="{{ act.0.id }}" data-url-ajax="{% url 'comments:respuestas_notificacion_ajax' %}" data-clicked="0"
+					class="show_comments_notificacion cerrado pull-right" href="">
+						<i class = "fa fa-comment"></i>
+						{{act.0.num_respuestas|default:""}}
+					</a>
+					{% if act.0.tipo == "compartio_libro_grupo" %}
+						<p> <a target="_blank" href="{% url 'perfiles:perfil_usuario' act.0.perfil_actor.usuario.username %}">{{act.0.perfil_actor.usuario.username}}</a> compartió el libro 
+						<strong> {{act.0.libro.titulo}} </strong> de <strong> {{act.0.libro.autor}}</strong> 
+						con el grupo <a target="_blank" href="{% url 'grupos:main_grupo_actividad' act.0.grupo.id %}">{{act.0.grupo.nombre}}</a>
+						</p>
+					{% elif act.0.tipo == "comenzo_leer" %}
+						<p> <a target="blank" href="{% url 'perfiles:perfil_usuario' act.0.perfil_actor.usuario.username %}">{{act.0.perfil_actor.usuario.username}}</a> empezó a leer 
+						<strong> {{act.0.libro.titulo}} </strong> de <strong> {{act.0.libro.autor}}</strong> 
+						</p>
+					{% elif act.0.tipo == "termino_leer" %}
+						<p> <a target="blank" href="{% url 'perfiles:perfil_usuario' act.0.perfil_actor.usuario.username %}">{{act.0.perfil_actor.usuario.username}}</a> terminó de leer
+						<strong> {{act.0.libro.titulo}} </strong> de <strong> {{act.0.libro.autor}}</strong>!
+						</p>
+					{% elif act.0.tipo == "compartio_libro_abierto" %}
+						<div class="alert callout alert-default">
+							<div class="row">
+								<p> <a target="blank" href="{% url 'perfiles:perfil_usuario' act.0.perfil_actor.usuario.username %}">{{act.0.perfil_actor.usuario.username}}</a> compartió el libro 
+									<strong> {{act.0.libro.titulo}} </strong> de <strong> {{act.0.libro.autor}}</strong> 
+								con la comunidad de {{act.0.perfil_actor.ciudad.name}}.
+								</p>
+							</div>
+						</div>
+					{% endif %}
+					<div class = "hidden comments">
+						<br>
+						<div class = "col-md-offset-1 div_respuestas">
+							<div class = "respuestas_comment">
+							</div>
+							{% if user.is_authenticated %}
+							<!-- Comment form -->	
+							<form action="" method="post" class="sky-form">
+								{% csrf_token %}
+								<fieldset>
+									<section>
+										<label class="textarea">
+											<i class="icon-append fa fa-comment fa-flip-horizontal"></i>
+											<textarea class="texto_comment" placeholder="Escribe tu comentario" 
+											name = "comentario" rows="2"></textarea>
+										</label>
+									</section>
+									<button data-id="{{act.0.id}}" data-url="{% url 'comments:comment_notificacion_ajax' %}" type="submit" class="button comment_notificacion">
+									Comentar
+									</button>
+								</fieldset>
+							</form>
+							{% else %}
+								<p class="pull-right" title="Necesitas estar registrado para poder comentar"><i class="fa fa-lock"></i></p>
+							{% endif %}
+						</div>
+					</div>
 				</div>
 			</div>
-			{% endfor %}
-
-			{% for l in libros_prestados_bcompartida %}
-			<div class="alert callout alert-default fade in">
-				<div class="row">
-					<div class="col-md-9 col-sm-9"><!-- left text -->
-						<h4><strong>{{l.libro.titulo}}</strong> {{l.libro.autor}}</h4>
-						<p>Libro de <a href="{% url 'libros:biblioteca_compartida' l.biblioteca_compartida.slug %}">{{l.biblioteca_compartida.nombre}}</a>
-						{% if l.fecha_max_devolucion %} , prestado hasta: {{l.fecha_max_devolucion|date}} {% endif %}</p>
-					</div><!-- /left text -->
-				</div>
-			</div>
-			{% endfor %}
 		{% endif %}
-		</div>
-	</div>
+	{% endfor %}
 </div>
 
 <div class = "col-md-4">
-
 	<br>
 	<figure class="text-center margin-bottom8">		
 		<img class="img-responsive img-circle" src="{{avatar}}" width="260" height="260" alt="">
@@ -94,13 +165,22 @@
 					</div>
 				</div>
 			</div>
+			{% empty %}
+			<div class="alert alert-default">
+				<div class="row">
+					<div class="col-md-9 col-sm-9"><!-- left text -->												
+						<p>{{perfil.usuario.username}} aún no ha recibido un libro prestado.
+						</p>
+					</div>
+				</div>
+			</div>
 			{% endfor %}
 
 			{% for libro_recibido in historial_libros.libros_recibidos_bcompartida %}
 			<div class="alert alert-default">
 				<div class="row">
 					<div class="col-md-9 col-sm-9"><!-- left text -->
-						<p>{{libro_recibido.libro.titulo}} <small> {{libro_recibido.libro.autor}} </small> <br>
+						<p> {{libro_recibido.libro.titulo}} <small> {{libro_recibido.libro.autor}} </small><br>
 							{{libro_recibido.fecha_prestamo|date}} de <a href="{% url 'libros:biblioteca_compartida' libro_recibido.biblioteca_compartida.slug %}">
 							{{libro_recibido.biblioteca_compartida.nombre}}</a>
 						</p>
@@ -110,22 +190,237 @@
 			{% endfor %}
 			
 			<h4>Libros prestados: </h4>
-
 			{% for libro_prestado in historial_libros.libros_prestados_por_usuario %}
 					<div class="alert alert-default">
 						<div class="row">
 							<div class="col-md-9 col-sm-9"><!-- left text -->
-								<p>{{libro_prestado.libro.titulo}} <br> <small> {{libro_prestado.libro.autor}} </small> <br>
+								<p>Prestó {{libro_prestado.libro.titulo}} <br> <small> {{libro_prestado.libro.autor}} </small> de<br>
 									{{libro_prestado.fecha_prestamo|date}} a <a href="{% url 'perfiles:perfil_usuario' libro_prestado.perfil_receptor.usuario.username %}">
 									{{libro_prestado.perfil_receptor.usuario.username}}</a>
 								</p>
 							</div><!-- /left text -->
 						</div>
-					</div>		
+					</div>
+
+				{% empty %}
+					<div class="alert alert-default">
+						<div class="row">
+							<div class="col-md-9 col-sm-9"><!-- left text -->												
+								<p>{{perfil.usuario.username}} no ha prestado un libro todavía.
+								</p>
+							</div>
+						</div>
+					</div>
 			{% endfor %}
 		</div>
 	</div>
+
+	{% if grupos %}
+		<hr class ="half-margins invisible">
+		<h4> Grupos </h4>		
+		{% for grupo in grupos %}
+			<a href="{% url 'grupos:main_grupo_actividad' grupo.id %}" class="">{{grupo.nombre}}</a>
+			<br>
+		{% endfor %}
+	{% endif %}
+
 	<!-- /activity list -->
 	<hr class = "invisible">
 </div>
 {% endblock content %}
+
+
+{% block extra_javascript %}
+<script type="text/javascript" src="{% static 'assets/js/jquery-ui-fold.js' %}"></script>
+<script type="text/javascript" src="{% static 'assets/js/jquery.validate.js' %}"></script>
+
+<script>
+
+$(document).ready(function(){
+
+	// Esconder comentarios
+	$(".comments").hide();
+	$(".comments").removeClass("hidden");
+
+	// Funcionalidades de comentarios
+	$(".show_respuestas_comment").on("click", function(e){
+		e.preventDefault();
+		var comments_div = $(this).parent().find(".comments")
+
+		if( $(this).hasClass("cerrado") ){
+			comments_div.show("fold");
+			$(this).removeClass("cerrado");
+		} else{
+			comments_div.hide("fold");
+			$(this).addClass("cerrado");
+		}
+
+		// revisar data-clicked para definir si es necesario hacer request por las respuestas o no		
+		if($(this).data("clicked")==0){			
+			// ajax pide respuestas al comment
+			var id_comment = $(this).data("id");
+			var url_ajax = $(this).data("url-ajax");
+			var icon_abrir_comments = $(this);
+
+			$.ajax({
+				method: "GET",
+				url: url_ajax,
+				data: {'id_comment': id_comment},
+				success: function(response){
+					respuestas = JSON.parse(response);
+					var respuestas_div = icon_abrir_comments.parent().find('.respuestas_comment');
+				
+					$.each(respuestas, function(index, value){
+					$(respuestas_div).append(
+						"<div class=well>"+
+						"<a class='pull-left' target='_blank' href='"+"/perfil/usuario/"+value[2]+"'>"+
+						"<img class='img-responsive circular' src='"+value[3]+"'>"+"</a>"+"&nbsp"+
+						value[1]+
+						"</div>"
+						);
+					});
+
+					// cambiar data "clicked" a 1 para que no vuelva a cargar en caso de que cierre y abra los comments de nuevo
+					icon_abrir_comments.data("clicked", "1");
+				}
+			});
+		} 
+	});
+
+	$(".show_comments_notificacion").on("click", function(e){
+		e.preventDefault();
+		var comments_div = $(this).parent().find(".comments")
+
+		if( $(this).hasClass("cerrado") ){
+			comments_div.show("fold");
+			$(this).removeClass("cerrado");
+		} else{
+			comments_div.hide("fold");
+			$(this).addClass("cerrado");
+		}
+
+		// revisar data-clicked para definir si es necesario hacer request por las respuestas o no
+		
+		if($(this).data("clicked")==0){			
+			// ajax pide respuestas al comment
+			var id_notificacion = $(this).data("id");
+			var url_ajax = $(this).data("url-ajax");
+			var icon_abrir_comments = $(this);
+			
+
+			$.ajax({
+				method: "GET",
+				url: url_ajax,
+				data: {'id_notificacion': id_notificacion},
+				success: function(response){
+					respuestas = JSON.parse(response);
+					var respuestas_div = icon_abrir_comments.parent().find('.respuestas_comment');
+				
+					$.each(respuestas, function(index, value){
+					$(respuestas_div).append(
+						"<div class=well>"+
+						"<a class='pull-left' target='_blank' href='"+"/perfil/usuario/"+value[2]+"'>"+
+						"<img class='img-responsive circular' src='"+value[3]+"'>"+"</a>"+"&nbsp"+
+						value[1]+
+						"</div>"
+						);
+					});
+
+					// cambiar data "clicked" a 1 para que no vuelva a cargar en caso de que cierre y abra los comments de nuevo
+					icon_abrir_comments.data("clicked", "1");
+				}
+			});
+		} 
+	});
+
+	var CambiarTextoError = function(objeto, texto_original){
+		objeto.text("Hubo un error");
+		setTimeout(function(){
+			objeto.text(texto_original);
+		}, 2000);
+	}
+
+	$(".enviar_respuesta").on("click", function(e){
+		e.preventDefault();
+
+		var texto_respuesta = $(this).parent().find(".texto_respuesta").val()
+		var comment_id = $(this).data("id");
+		var url_ajax = $(this).data("url")
+
+		var data = {'texto_respuesta': texto_respuesta, 'comment_id': comment_id, 'csrfmiddlewaretoken': "{{csrf_token}}"}
+		var submit_button = $(this);
+
+		var respuestas_div = submit_button.closest(".div_respuestas").find('.respuestas_comment');
+
+		$.ajax({
+			method: "POST",
+			url: url_ajax,
+			data: data,
+			success: function(response){
+				respuesta = JSON.parse(response);
+				var respuestas_div = submit_button.closest(".div_respuestas").find('.respuestas_comment');
+							
+				$(respuestas_div).append(
+					"<div class=well>"+
+					"<a class='pull-left' target='_blank' href='"+"/perfil/usuario/"+respuesta[2]+"'>"+
+					"<img class='img-responsive circular' src='"+respuesta[3]+"'>"+"</a>"+"&nbsp"+
+					respuesta[1]+
+					"</div>"
+					);								
+			},
+			error: function(){
+				CambiarTextoError(submit_button, "Responder");
+			}
+		})
+	});
+
+	$(".comment_notificacion").on("click", function(e){
+		e.preventDefault();
+
+		var texto_comment = $(this).parent().find(".texto_comment").val();
+		var id_notificacion = $(this).data("id");
+		var url_ajax = $(this).data("url");
+
+		var data = {'texto_comment': texto_comment, 'id_notificacion': id_notificacion, 'csrfmiddlewaretoken': "{{csrf_token}}"}
+		var submit_button = $(this);
+
+		var respuestas_div = submit_button.closest(".div_respuestas").find('.respuestas_comment');
+
+		$.ajax({
+			method: "POST",
+			url: url_ajax,
+			data: data,
+			success: function(response){
+				respuesta = JSON.parse(response);
+				var respuestas_div = submit_button.closest(".div_respuestas").find('.respuestas_comment');
+							
+				$(respuestas_div).append(
+					"<div class=well>"+
+					"<a class='pull-left' target='_blank' href='"+"/perfil/usuario/"+respuesta[2]+"'>"+
+					"<img class='img-responsive circular' src='"+respuesta[3]+"'>"+"</a>"+"&nbsp"+
+					respuesta[1]+
+					"</div>"
+					);		
+			},
+			error: function(){
+				CambiarTextoError(submit_button, "Comentar");
+			}
+		});
+	});
+	
+
+	$(".form_comentario").validate({
+		rules: {
+			comentario: {
+				required: true,
+			}
+		},
+		messages: {
+			comentario: "Escribe un comentario."
+		}
+	});
+});
+</script>
+
+{% endblock extra_javascript %}
+
